<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/orderToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_colors"
        android:theme="@style/ToolbarStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/prescriptionCardLayout">
        <TextView
            android:layout_marginTop="16dp"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:text="@string/prescription_not_set"/>

        <TextView
        android:layout_marginTop="16dp"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:text="@string/otc_display"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/medicine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:inputType="textAutoComplete"
            android:imeOptions="actionNext"
            android:hint="@string/med_name" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:hint="@string/number_of_items"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/med_type" />

                <RadioGroup
                    android:id="@+id/medicineType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="20dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/oneTime"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/type_one"
                        android:checked="true"
                       />

                    <RadioButton
                        android:id="@+id/regular"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/type_regular"
                       />

                </RadioGroup>
    <View
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <Button
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_added"
        android:textColor="@android:color/white"
        android:background="@drawable/button_pressed_indicator_2" />
    </LinearLayout>
</LinearLayout>


