<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/firstFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#CCFFFFFF"
            android:gravity="center">
            <TextView
                android:layout_margin="10dp"
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_save_time"
                android:textColor="@color/primary_dark"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/accent"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_gravity="center" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/no_pharmacy"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/primary_dark"
            android:text="@string/fa_no_pharmacy"
            android:layout_gravity="left"
            />
        <TextView
            android:id="@+id/fast_free"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/primary_dark"
            android:text="@string/fa_fast_free"
            android:layout_gravity="left"
            />
        <TextView
            android:id="@+id/doorstep"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/primary_dark"
            android:text="@string/fa_doorstep"
            android:layout_gravity="left"/>
    </LinearLayout>
        </LinearLayout>
</LinearLayout>
